--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     
-
+    <meta name="description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios.">
+    <meta property="og:title" content="Happy hour tours" />
+    <meta property="og:url" content="https://appyhour.netlify.app/" />
+    <meta property="og:description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios.">
+    <meta property="og:image" content="https://res.cloudinary.com/dyiagjrai/image/upload/v1607437448/logos-appyhour/appyhour_rvgm6z.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
