--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Happy hour tours" />
     <meta property="og:url" content="https://appyhour.netlify.app/" />
     <meta property="og:description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios.">
-    <meta property="og:image" content="https://res.cloudinary.com/dyiagjrai/image/upload/v1607437448/logos-appyhour/appyhour_rvgm6z.png">
+    <meta property="og:image" content="https://res.cloudinary.com/dyiagjrai/image/upload/c_scale,w_200/v1608656858/logos-appyhour/logo192_bgb4rs.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
