Feat: social test2

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
     <meta property="og:url" content="https://appyhour.netlify.app/" />
     <meta property="og:description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios.">
     <meta property="og:image" content="https://res.cloudinary.com/dyiagjrai/image/upload/c_scale,w_200/v1608656858/logos-appyhour/logo192_bgb4rs.png">
+
+
+    <meta property="twitter:title" content="Happy hour tours" />
+    <meta property="twitter:card" content="hollaa" />
+    <meta property="twitter:description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios.">
+    <meta property="twitter:image" content="https://res.cloudinary.com/dyiagjrai/image/upload/c_scale,w_200/v1608656858/logos-appyhour/logo192_bgb4rs.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
