--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       gtag('config', 'UA-178768881-1');
     </script>
 
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
