Feat: test twitter share

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,9 @@
     <meta property="og:url" content="https://appyhour.netlify.app/" />
     <meta property="og:description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios.">
     <meta property="og:image" content="https://res.cloudinary.com/dyiagjrai/image/upload/c_scale,w_200/v1608656858/logos-appyhour/logo192_bgb4rs.png">
-    <!-- <meta name="twitter:card" content="summary_large_image"> -->
-
-
-
-
-    <meta name="twitter:card" content="summary" />
+    
+    
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@appyhour" />
     <meta name="twitter:title" content="Happy hour tours" />
     <meta name="twitter:description" content="Recorre las más fantasticas rutas de cervezas y consigue grandes premios." />
